<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPercent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/title_register"
        app:layout_constraintTop_toTopOf="@+id/glPercent"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        android:layout_marginTop="20sp"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/text_hint_name"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="8dp"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/text_hint_email"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/text_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="8dp"/>



    <Button
        android:id="@+id/btRegister"
        android:text="@string/btn_register_register"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>