<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="26dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPercent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPercentEnd"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/title_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        android:layout_marginTop="20dp"
        android:textSize="30sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/text_user_hint"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/text_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="8dp"/>

    <Button
        android:id="@+id/btLogin"
        android:text="@string/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintBottom_toBottomOf="@+id/glPercentEnd"
        />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/glPercentEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>